--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "### Date: 07/08/23",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "node --watch server.js"
   },
   "keywords": [],
   "author": "",
